--- a/components/index.html
+++ b/components/index.html
@@ -9,7 +9,7 @@
       <link rel="stylesheet" href="/assets/styles.css">
       <script src="https://unpkg.com/htmx.org@1.9.6" integrity="sha384-FhXw7b6AlE/jyjlZH5iHa/tTe9EpJ1Y55RjcgPbjeWMskSxZt1v9qkxLJWNJaGni" crossorigin="anonymous"></script>
     </head>
-    <ul>
+    <ul class="menu-bar">
       <li><a href="/" class="active">Home</a></li>
       <li><a href="/jokes">Jokes</a></li>
       <li><a href="/contact">Contact</a></li>
@@ -18,6 +18,9 @@
     <div>
       <h1 class="heading">Welcome to Chase's website</h1>
       <p class="paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat</p>
+    </div>
+    <div style="justify-content: center; align-items: center;">
+      <img src="/assets/logo.png" class="fullscreen-image">
     </div>
   </body>
 </html>
