--- a/components/contact.html
+++ b/components/contact.html
@@ -9,7 +9,7 @@
       <link rel="stylesheet" href="/assets/styles.css">
       <script src="https://unpkg.com/htmx.org@1.9.6" integrity="sha384-FhXw7b6AlE/jyjlZH5iHa/tTe9EpJ1Y55RjcgPbjeWMskSxZt1v9qkxLJWNJaGni" crossorigin="anonymous"></script>
     </head>
-    <ul>
+    <ul class="menu-bar">
       <li><a href="/">Home</a></li>
       <li><a href="/jokes">Jokes</a></li>
       <li><a href="/contact" class="active">Contact</a></li>
@@ -17,19 +17,21 @@
     </ul>
     <div>
       <h1 class="heading">Contact Chase</h1>
-      <p class="paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat</p>
     </div>
     <div>
-      <div style="float: left" class="term">
+      <div class="term hstack">
         <p>Phone:</p>
         <p>Email:</p>
         <p>Fax:</p>
       </div>
-      <div style="float: left" class="definition">
+      <div class="definition hstack">
         <p>(555) 555-5555</p>
         <p>chase@chase.com</p>
         <p>(333) 333-3333</p>
       </div>
+    </div>
+    <div class="floating-box containerdivNewLine">
+      <p>Obviously this contact information is all fake. If you've stumbled upon this website and actually want to contact me, you can't.</p>
     </div>
   </body>
 </html>
