--- a/components/joke.html
+++ b/components/joke.html
@@ -1,3 +1,3 @@
 <div class="floating-box" id="joke-box">
-  <p>a {{ .Noun }} {{ .Verb }} into a bar, the bartender asks "Why the {{ .Adjective }} face?"</p>
+  <p>{{ .IndefiniteArticle }} {{ .Noun }} {{ .Verb }} into a bar, the bartender asks "Why the {{ .Adjective }} face?"</p>
 </div>
