--- a/components/jokes.html
+++ b/components/jokes.html
@@ -6,7 +6,7 @@
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <meta http-equiv="X-UA-Compatible" content="ie=edge">
       <title>Chase</title>
-      <link rel="stylesheet" href="/assets/styles.css">
+      <link rel="stylesheet" href="./styles/styles.css">
       <script src="https://unpkg.com/htmx.org@1.9.6" integrity="sha384-FhXw7b6AlE/jyjlZH5iHa/tTe9EpJ1Y55RjcgPbjeWMskSxZt1v9qkxLJWNJaGni" crossorigin="anonymous"></script>
     </head>
     <ul class="menu-bar">
