--- a/styles/styles.css
+++ b/styles/styles.css
@@ -74,7 +74,7 @@ li a:hover {
 
 .floating-box {
   color: var(--tan);
-  max-width: calc(100% - 30px);
+  max-width: calc(100% - 10px);
   min-width: calc(200px);
   min-height: 100%;
 
@@ -84,6 +84,11 @@ li a:hover {
   margin: 5px;
   padding: 5px;
   font-family: monospace;
+}
+
+.floating-box p {
+  padding-left: 10px;
+  padding-right: 10px;
 }
 
 .hstack {
