--- a/components/index.html
+++ b/components/index.html
@@ -1,28 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
-  <body class="content-frame">
-    <head>
-      <meta charset="UTF-8">
-      <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <meta http-equiv="X-UA-Compatible" content="ie=edge">
-      <title>Chase</title>
-      <link rel="stylesheet" href="./styles/styles.css">
-      <script src="https://unpkg.com/htmx.org@1.9.6" integrity="sha384-FhXw7b6AlE/jyjlZH5iHa/tTe9EpJ1Y55RjcgPbjeWMskSxZt1v9qkxLJWNJaGni" crossorigin="anonymous"></script>
-    </head>
-    <ul class="menu-bar">
-      <li><a href="/" class="active">Home</a></li>
-      <li><a href="/jokes">Jokes</a></li>
-      <!-- <li><a href="/contact">Contact</a></li> -->
-      <li><a href="/photos">Photos</a></li>
-      <!-- <li style="float:right"><a href="/about">About</a></li> -->
 
-    </ul>
-    <div>
-      <h1 class="heading">Welcome to Chase's website</h1>
-      <p class="paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat</p>
-    </div>
-    <div style="justify-content: center; align-items: center;">
-      <img src="/assets/logo.png" class="fullscreen-image">
-    </div>
-  </body>
+<body class="content-frame">
+
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Chase</title>
+    <link rel="stylesheet" href="./styles/styles.css">
+    <script src="https://unpkg.com/htmx.org@1.9.6"
+      integrity="sha384-FhXw7b6AlE/jyjlZH5iHa/tTe9EpJ1Y55RjcgPbjeWMskSxZt1v9qkxLJWNJaGni"
+      crossorigin="anonymous"></script>
+  </head>
+  <link rel="apple-touch-icon" href="/favicon.ico">
+  <ul class="menu-bar">
+    <li><a href="/" class="active">Home</a></li>
+    <li><a href="/jokes">Jokes</a></li>
+    <!-- <li><a href="/contact">Contact</a></li> -->
+    <li><a href="/photos">Photos</a></li>
+    <!-- <li style="float:right"><a href="/about">About</a></li> -->
+
+  </ul>
+  <div>
+    <h1 class="heading">Welcome to Chase's website</h1>
+    <p class="paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+      labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
+      ex ea commodo consequat</p>
+  </div>
+  <div style="justify-content: center; align-items: center;">
+    <img src="/assets/logo.png" class="fullscreen-image">
+  </div>
+</body>
+
 </html>
