--- a/views/photos.html
+++ b/views/photos.html
@@ -13,11 +13,7 @@
       integrity="sha384-FhXw7b6AlE/jyjlZH5iHa/tTe9EpJ1Y55RjcgPbjeWMskSxZt1v9qkxLJWNJaGni"
       crossorigin="anonymous"></script>
   </head>
-  <ul class="menu-bar">
-    <li><a href="/">Home</a></li>
-    <li><a href="/jokes">Jokes</a></li>
-    <li><a href="/photos" class="active">Photos</a></li>
-  </ul>
+  <div hx-trigger="load" hx-get="/navbar" class="menu-bar"></div>
   <h1>Photo Gallery</h1>
   <div id="gallery" class="row">
     <script>
@@ -49,6 +45,7 @@
                 console.log('loaded', index);
                 recursiveRender(index + 1);
               };
+              img.loading = 'lazy';
               const column = document.getElementById(`column${(imageCount % COLUMN_COUNT) + 1}`);
               a.appendChild(img);
               column.appendChild(a);
