add ability to log out

--- a/views/budget.html
+++ b/views/budget.html
@@ -17,7 +17,7 @@
   <div hx-trigger="load" hx-get="/navbar" class="menu-bar"></div>
   <div>
     <h1 class="heading">Welcome to Chase's Budget</h1>
-    <div hx-trigger="load" hx-get="/login"></div>
+    <div hx-trigger="load" hx-get="/budgetData"></div>
   </div>
 </body>
 
