--- a/components/navbar.html
+++ b/components/navbar.html
@@ -22,5 +22,7 @@
   {{ else}}
   <li><a href="/budget">Budget</a></li>
   {{ end }}
-
+  <li style="float:right">
+    <a href="/logout" class="logout">Logout</a>
+  </li>
 </ul>
