fix navbar highlighting in deployed environments

--- a/components/navbar.html
+++ b/components/navbar.html
@@ -22,6 +22,8 @@
   {{ else}}
   <li><a href="/budget">Budget</a></li>
   {{ end }}
+
+  <!-- TODO: Hide the logout button if the user is unauthenticated -->
   <li style="float:right">
     <a href="/logout" class="logout">Logout</a>
   </li>
