--- a/components/login.html
+++ b/components/login.html
@@ -1,5 +1,5 @@
 <form id="login-form" hx-target="form" hx-swap="outerHTML">
-  {{ .FormError }}
+  {{ .ErrorMessage }}
   <div>
     <label for="username">Username:</label>
     <input type="text" name="username" placeholder="Enter your username" required>
