--- a/components/budget.html
+++ b/components/budget.html
@@ -1,3 +1,13 @@
 <div>
-  <h2 class="heading">You are now authorized</h1><img src="/assets/logo.png" class="fullscreen-image">
+  <h3>Tansactions</h3>
+  <ul>
+    {{ range .}}
+    <li>
+      <div>
+        <p class="paragraph">Amount: ${{.TransactionAmount}}</p>
+        <p class="paragraph">Date: {{.TransactionDate}}</p>
+      </div>
+    </li>
+    {{ end}}
+  </ul>
 </div>
