--- a/components/login.html
+++ b/components/login.html
@@ -1,12 +1,12 @@
-<form id="login-form" hx-target="form" hx-swap="outerHTML">
+<form action="/auth">
   {{ .ErrorMessage }}
-  <div>
-    <label for="username">Username:</label>
-    <input type="text" name="username" placeholder="Enter your username" required>
+  <div class="inputGroup">
+    <label for="email">Username:</label>
+    <input type="email" name="email" placeholder="Enter your email" required>
   </div>
-  <div>
+  <div class="inputGroup">
     <label for="password">Password:</label>
-    <input type="text" name="password" placeholder="Enter your password" required>
+    <input type="password" name="password" placeholder="Enter your password" required>
   </div>
-  <button type="submit" hx-post="/auth" hx-target="form">Login</button>
+  <button class="floating-button" type="submit">Login</button>
 </form>
